--- a/index.html
+++ b/index.html
@@ -496,7 +496,9 @@
           <div class="flex flex-col items-center md:items-end gap-3">
             <div class="flex items-center gap-3">
               <i class="fa-solid fa-code text-xl text-green-400"></i>
-              <h4 class="font-bold text-lg text-white">طراح و توسعه دهنده</h4>
+              <h4 class="font-bold text-lg text-white">
+                طراح و توسعه دهنده : Amirhossin
+              </h4>
             </div>
             <p>
               ساخته شده با <i class="fa-solid fa-heart text-red-500"></i> برای
